--- a/app/frontend/spagnesi/template/pagine/home.twig
+++ b/app/frontend/spagnesi/template/pagine/home.twig
@@ -9,12 +9,12 @@
             <h2>Qualità artigiana in fabbrica!</h2>
             <p>
                 Tutti i <strong>divani</strong> e le <strong>poltrone</strong> DivaniLab sono realizzati a mano dai nostri artigiani che grazie alla loro esperienza e ai materiali di alta qualità realizzano <strong>prodotti unici</strong> dal design moderno ed elegante.<br />
-                Scopri tutti i prodotti della sezione <strong><a href="#">Outlet</a></strong> in <strong>pronta consegna</strong> a prezzi imperdibili!<br />
+                Scopri tutti i prodotti della sezione <strong><a href="/outlet">Outlet</a></strong> in <strong>pronta consegna</strong> a prezzi imperdibili!<br />
                 <span class="evid">Sconti fino al 70%</span>
             </p>
 
             <div class="text-center">
-                <a href="" class="btn btn-primary">Vai ai prodotti in offerta!</a>
+                <a href="/outlet" class="btn btn-primary">Vedi divani e poltrone in offerta!</a>
             </div>
         </article>
     </section>
