--- a/app/frontend/spagnesi/template/base/head/head.twig
+++ b/app/frontend/spagnesi/template/base/head/head.twig
@@ -2,6 +2,7 @@
 <html lang="it">
 <head>
 
+    <meta charset="utf-8" />
     {% include "base/head/meta.twig" %}
 
     {% include "base/head/css.twig" %}
