--- a/app/assets/css/less/buttons.less
+++ b/app/assets/css/less/buttons.less
@@ -30,3 +30,14 @@
   border-color:#000;
   background: #fff;
 }
+
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle{
+  background: @colorMain;
+  border-color: @colorMain;
+}
+.btn-primary.focus, .btn-primary:focus{
+  box-shadow: 0 0 0 0.2rem @colorMain;
+}
+.btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show>.btn-primary.dropdown-toggle:focus{
+  box-shadow: 0 0 0 0.2rem @colorMain;
+}
