--- a/app/assets/css/less/common.less
+++ b/app/assets/css/less/common.less
@@ -44,6 +44,11 @@ footer{
     max-height:8em;
     width: auto;
   }
+  ul,li{
+    margin:0;
+    padding:0;
+    list-style: none;
+  }
 }
 
 .evid{
