vari bug e float

--- a/app/frontend/spagnesi/template/ecommerce/carrello.twig
+++ b/app/frontend/spagnesi/template/ecommerce/carrello.twig
@@ -25,7 +25,8 @@
                             <div class="row card-body">
                                 <div class="col-2">
                                     <figure class="thumbnail">
-                                        <img class="thumbnail" src="{{ lineitem.variant.immagini[0].value}}">
+
+                                        <img class="thumbnail" src="{{ lineitem.prodotto.immagini[0].value}}">
                                     </figure>
 
 
