--- a/app/frontend/spagnesi/template/ecommerce/shop/category.twig
+++ b/app/frontend/spagnesi/template/ecommerce/shop/category.twig
@@ -3,7 +3,7 @@
 
   {% block topcontent %}
       <div class="category-top">
-          <img src="{{ immagineTop}}" class="cover">
+          <img src="{{ categoria.immagine}}" class="cover">
           <div class="container">
             <h1 class="category-title">{{ categoria.nome }}</h1>
             <h2 class="category-description">{{ categoria.slogan|raw }}</h2>
