--- a/app/frontend/spagnesi/template/ecommerce/checkout/parti/riepilogo.twig
+++ b/app/frontend/spagnesi/template/ecommerce/checkout/parti/riepilogo.twig
@@ -26,11 +26,26 @@
         </div>
 </div>
 -->
-<div class="card mt-5 p-5">
+<div class="card mt-5 pl-2 pr-2">
+
     <div class="card-body">
-        <h3>Riepilogo</h3>
-    </div>
-    <div class="card-body">
+        {% if carrello.indirizzoSpedizione %}
+            <div class="row mb-3">
+                <div class="col">
+                <h5>Spedizione</h5>
+                {{ carrello.indirizzoSpedizione.nome }} {{ carrello.indirizzoSpedizione.cognome }},
+                {{ carrello.indirizzoSpedizione.via }}
+                {{ carrello.indirizzoSpedizione.citta }}
+                </div>
+                <div class="mr-3">
+                        <a class="btn btn-light ml-auto" href="{{ router_service.getRoute("frontend.ecommerce.checkout.spedizione").build() }}">Modifica</a>
+
+                </div>
+            </div>
+            <hr>
+        {% endif %}
+        <h5>Riepilogo</h5>
+
         {% include "ecommerce/checkout/parti/riepilogo-tabella.twig" %}
 
     </div>
