--- a/app/assets/css/less/common.less
+++ b/app/assets/css/less/common.less
@@ -87,3 +87,25 @@ p{
     }
   }
 }
+
+.blocco_colori{
+  margin: 30px;
+  .blocco_colore{
+    float: left;
+    width: 100px;
+    margin: 30px 15px;
+    text-align: center;
+    .blocco_img{
+      width: 100%;
+      height: auto;
+    } 
+    .blocco_text{
+      text-transform: uppercase;
+      padding:10px 0px;
+    }   
+  }
+  .blocco_clear{
+    clear: both;
+    height: 0px;
+  }
+}
