--- a/app/backend/template/list.twig
+++ b/app/backend/template/list.twig
@@ -11,8 +11,7 @@
 
                         <div class="list-actions float-right">
 
-                    
-                            <a href="{{ router_service.getRoute(entity~".add").build() }}" class="btn btn-sm btn-light btn-icon" data-toggle="tooltip" title="Aggiungi"><i class="fa fa-plus"></i></a>
+                            <a href="{{ router_service.getRoute(entity~".add").build(routeParams) }}" class="btn btn-sm btn-light btn-icon" data-toggle="tooltip" title="Aggiungi"><i class="fa fa-plus"></i></a>
                         </div>
 
                     </div>
