--- a/app/frontend/spagnesi/template/ecommerce/carrello.twig
+++ b/app/frontend/spagnesi/template/ecommerce/carrello.twig
@@ -5,101 +5,12 @@
         <div class="container">
 
 
-            <div class="row">
-                <div class="col-md-8">
-                    <h2>Prodotti presenti nel carrello</h2>
+            {% if carrello.lineitems| length > 0 %}
+                {% include "ecommerce/carrello/carrello-pieno.twig" %}
+            {% else %}
+                {% include "ecommerce/carrello/carrello-vuoto.twig" %}
+            {% endif %}
 
-                    {% if params.msg %}
-                        <div class="alert alert-dark">
-
-                            {{ params.msg }}
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-
-                        </div>
-                    {% endif %}
-
-                    {% for lineitem in carrello.lineitems %}
-                        <div class="card mb-3">
-                            <div class="row card-body">
-                                <div class="col-2">
-                                    <figure class="thumbnail">
-
-                                        <img class="thumbnail" src="{{ lineitem.prodotto.immagini[0].value}}">
-                                    </figure>
-
-
-
-
-                                </div>
-                                <div class="col-10">
-                                    <a href="{{ router_service.getRoute("frontend.ecommerce.schedaprodotto").build({slug:lineitem.prodotto.slug}) }}">
-                                    <h3>{{ lineitem.prodotto.nome }}</h3>
-                                    <h5>{{ lineitem.variant.nome }} <small>{{ lineitem.variant.sku }}</small></h5>
-                                    </a>
-
-
-                                    <div class="row">
-                                        <div class="col">
-                                            <label>Quantità</label>
-                                            <input value="{{ lineitem.quantity }}" class="form-control">
-
-                                        </div>
-                                        <div class="col">
-                                            {{ lineitem.single_price|price}}
-                                        </div>
-
-                                        <div class="col">
-                                            {{ lineitem.price_total|price}}
-
-
-                                            {% for attributo in lineitem.attributi %}
-                                                <span>{{ attributo.nome }} : {{ attributo.valore.valore }}</span><br>
-                                            {% endfor %}
-
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                    </div>
-                    {% endfor %}
-
-
-
-                </div>
-
-                <div class="col-md-4 pt-2">
-                    {% if not carrello.coupon %}
-                    <div class="card mt-5 p-2 bg-light">
-
-                        <div class="card-body">
-                            <h3>Hai un coupon?</h3>
-                            <form action="{{ router_service.getRoute("frontend.ecommerce.aggiungicoupon").build() }}" method="post">
-                                <span>Inserisci il codice coupon per ottenere uno sconto</span>
-                                <input type="text" class="form-control p-2" placeholder="Inserisci qui il codice coupon" name="coupon">
-                                <button class="btn btn-secondary btn-block">Salva coupon</button>
-                            </form>
-                        </div>
-                    </div>
-                    {% endif %}
-                    <div class="card mt-5 p-2">
-                        <div class="card-body">
-                            <h3>Riepilogo</h3>
-                        </div>
-                        <div class="card-body">
-
-                            {% include "ecommerce/checkout/parti/riepilogo-tabella.twig" %}
-
-                            <a href="/checkout" class="btn btn-secondary btn-block">Procedi all'acquisto</a>
-                            <a href="/checkout" class="btn btn-white btn-block">Torna allo shop</a>
-
-                        </div>
-                    </div>
-                </div>
-        </div>
         </div>
     </main>
 {% endblock %}
