--- a/app/assets/css/less/categoria.less
+++ b/app/assets/css/less/categoria.less
@@ -2,7 +2,8 @@
   position: relative;
   .cover {
     width: 100%;
-    height: auto;
+    min-height: 10vw;
+    max-height: 20vw;
   }
   >.container{
     position: absolute;
