--- a/app/assets/css/less/categoria.less
+++ b/app/assets/css/less/categoria.less
@@ -8,6 +8,7 @@
     @media (max-width:900px){
       height: 25vh;
       width: auto;
+      max-height: none;
       max-width: none;
       object-fit: cover;
       transform: translate(-50%,0);
