--- a/app/frontend/spagnesi/template/ecommerce/shop/list.twig
+++ b/app/frontend/spagnesi/template/ecommerce/shop/list.twig
@@ -12,7 +12,7 @@
                 <div class="col">
                     <div class="row">
                         {% for prodotto in prodotti %}
-                        <div class="col-6 mb-5">
+                        <div class="col-md-6 mb-5">
                             {% include "ecommerce/product/thumbnail-preview.twig" with {prodotto : prodotto} %}
                         </div>
                         {% endfor %}
