fix al css per le pelli

--- a/app/assets/css/less/common.less
+++ b/app/assets/css/less/common.less
@@ -88,24 +88,10 @@ p{
   }
 }
 
-.blocco_colori{
-  margin: 0px;
-  .blocco_colore{
-    float: left;
-    width: 150px;
-    margin: 15px 25px;
-    text-align: center;
-    .blocco_img{
-      width: 100%;
-      height: auto;
-    } 
-    .blocco_text{
-      text-transform: uppercase;
-      padding:10px 0px;
-    }   
-  }
-  .blocco_clear{
-    clear: both;
-    height: 0px;
-  }
-}
+.blocco_img{
+  max-width: 150px;
+} 
+.blocco_text{
+  text-transform: uppercase;
+  padding:7px 0px 20px;
+}   
