url compless e meta

--- a/app/frontend/spagnesi/template/base/head/meta.twig
+++ b/app/frontend/spagnesi/template/base/head/meta.twig
@@ -1,2 +1,11 @@
 <title>{{ meta.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="{{ meta.description }}">
+
+
+<meta property="og:url"                content="{{ current_url }}" />
+<meta property="og:type"               content="article" />
+<meta property="og:title"              content="{{ meta.title }}" />
+<meta property="og:description"        content="{{ meta.description }}" />
+<meta property="og:image"              content="{{ meta.og_image }}" />
+<meta property="og:site_name" content="DivaniLab" />
