--- a/app/frontend/spagnesi/template/emails/conferma-ordine.twig
+++ b/app/frontend/spagnesi/template/emails/conferma-ordine.twig
@@ -399,8 +399,9 @@
             <table class="email-content" width="100%" cellpadding="0" cellspacing="0">
                 <tr>
                     <td class="email-masthead">
-                        <a href="https://cartiamo.it" class="email-masthead_name">
-                            <img src="https://cartiamo.it/assets/img/logo.png" width="300">
+                        <a href="https://divanilab.it" class="email-masthead_name">
+                            <img src="https://divanilab.it/assets/img/logo/logo-lab.png" width="100" alt="DivaniLab">
+                            <h1 style="text-align:center">DivaniLab.it</h1>
                         </a>
                     </td>
                 </tr>
@@ -412,7 +413,7 @@
                             <tr>
                                 <td class="content-cell">
 
-                                    <p>Grazie per aver utilizzato Spagnesi, con questa mail ti confermiamo il tuo ordine n° <strong>{{ numeroordine }}</strong>
+                                    <p>Grazie per aver utilizzato DivaniLab.it, con questa mail ti confermiamo il tuo ordine n° <strong>{{ numeroordine }}</strong>
 
                                     <!-- Discount -->
                                     <h3>Riepilogo ordine</h3>
@@ -453,9 +454,9 @@
 
 
                                     <br>
-                                    <p>Se noti qualche problema puoi contattarci alla mail <a href="mailto:info@corium.it">info@corium.it</a></p>
+                                    <p>Se noti qualche problema puoi contattarci alla mail <a href="mailto:info@corium.it">info@divanilab.it</a></p>
                                     <p>Grazie,
-                                        <br>corium.it</p>
+                                        <br>divanilab.it</p>
 
                                 </td>
                             </tr>
