cookie e testi home

--- a/app/frontend/spagnesi/template/base/footer/footer.twig
+++ b/app/frontend/spagnesi/template/base/footer/footer.twig
@@ -143,7 +143,7 @@
                     }(document, 'script', 'aiosasdk'));
 
                 </script>
-
+                <!--Start Cookie Script--> <script type="text/javascript" charset="UTF-8" src="//cookie-script.com/s/1ffd40cf7809afa6def2c177183da701.js"></script> <!--End Cookie Script-->
             </div>
         </div>
     </div>
