--- a/app/frontend/spagnesi/template/pagine/home.twig
+++ b/app/frontend/spagnesi/template/pagine/home.twig
@@ -75,14 +75,14 @@
                 <div class="col-md-6 pr-5">
                     <p>
                         <strong>Nuova collezione: tutto su misura.</strong><br />
-                        DivaniLab realizza il vostro <strong>divano su misura</strong> in base al rivestimento e alle dimensioni che sceglierete durante l'acquisto.<br />Pertanto la consegna di tutti i nuovi modelli avviene in <strong>2/3 settimane</strong>... giusto il tempo di realizzare il vostro prodotto personalizzato e consegnarlo direttamente a casa vostra!
+                        DivaniLab realizza il vostro <strong>divano su misura</strong> in base al rivestimento e alle dimensioni che sceglierete durante l'acquisto.<br />Pertanto la consegna di tutti i nuovi modelli avviene in <strong>6/8 settimane</strong>... giusto il tempo di realizzare il vostro prodotto personalizzato e consegnarlo direttamente a casa vostra!
                     </p>
                     <a href="" class="btn btn-secondary">Nuova Collezione</a>
                 </div>
                 <div class="col-md-6 pl-5">
                     <p>
                         <strong>Outlet: pronta consegna.</strong><br />
-                        La sezione Outlet raccoglie modelli realizzati in stock o di precedenti collezioni. Non è possibile personalizzare questi prodotti perché sono già <strong>disponibili in magazzino</strong> e potranno essere consegnati a casa vostra entro <strong>2-3 giorni lavorativi</strong>... la qualità è sempre la stessa, in più è perfetto per chi non sa aspettare! ;-)
+                        La sezione Outlet raccoglie modelli realizzati in stock o di precedenti collezioni. Non è possibile personalizzare questi prodotti perché sono già <strong>disponibili in magazzino</strong> e potranno essere consegnati a casa vostra entro <strong>3/4 settimane</strong>... la qualità è sempre la stessa, in più è perfetto per chi non sa aspettare! ;-)
                     </p>
                     <a href="" class="btn btn-secondary">Outlet</a>
                 </div>
