--- a/app/frontend/spagnesi/template/ecommerce/checkout/spedizione.twig
+++ b/app/frontend/spagnesi/template/ecommerce/checkout/spedizione.twig
@@ -17,7 +17,7 @@
                     </form>
 
                 </div>
-                <div class="col-5">
+                <div class="col-md-5">
                     {% include "ecommerce/checkout/parti/riepilogo.twig" with { carrello:carrello }%}
                 </div>
             </div>
