aggiunta descrizione in template categoria prodotto

--- a/app/frontend/spagnesi/template/ecommerce/shop/category.twig
+++ b/app/frontend/spagnesi/template/ecommerce/shop/category.twig
@@ -12,8 +12,7 @@
 
       <div class="container">
           <div class="text-center mb-5">
-              <p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vulputate orci convallis hendrerit varius.
-                      Quisque eu molestie ex. Aenean non mattis sem, vel efficitur nisl. Sed in ex commodo, tempor est ac, scelerisque lacus. Curabitur luctus felis tempor sem dapibus.</em></p>
+              <p><em>{{ categoria.descrizione|raw }}</em></p>
           </div>
 
       </div>
