--- a/app/frontend/spagnesi/template/base/header/header-checkout.twig
+++ b/app/frontend/spagnesi/template/base/header/header-checkout.twig
@@ -9,6 +9,9 @@
                         <a href="/">
                             <img class="logo logo-black" src="/assets/img/logo/logo-lab.png" alt="Cartiamo">
                         </a>
+
+
+                        <h1>Divani Lab</h1>
                     </div>
                 </div>
 
