--- a/app/assets/css/less/prodotto.less
+++ b/app/assets/css/less/prodotto.less
@@ -600,3 +600,12 @@ body.scegliendo-variante{
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
   z-index: 10;
 }
+
+
+.more-products{
+  margin-bottom: -3rem;
+  background: #ececec;
+  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  margin-top: 3em;
+}
