--- a/app/frontend/spagnesi/template/ecommerce/checkout/registrazione.twig
+++ b/app/frontend/spagnesi/template/ecommerce/checkout/registrazione.twig
@@ -5,12 +5,12 @@
         {% include "ecommerce/checkout/parti/steps.twig" %}
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-md-6">
                 <h2 class="pb-1">Crea un nuovo utente</h2>
                 <h5 class="font-weight-bold mb-5">Informazioni personali</h5>
                 {% include "ecommerce/checkout/parti/form-registrazione.twig" %}
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
 
                 <div class=" mt-5 p-5">
                 <div class="card-body">
