--- a/app/frontend/spagnesi/template/ecommerce/user-account/index.twig
+++ b/app/frontend/spagnesi/template/ecommerce/user-account/index.twig
@@ -1,105 +1,52 @@
-{% extends "base/template.twig" %}
+{% extends "ecommerce/user-account/base.twig" %}
+{% block backButtonAccount %}{% endblock %}
 
-{% block content %}
-    <main  class="mb-5 pt-5">
-        <div class="container">
+{% block innerAccount %}
+    <h1 class="mb-5">Il tuo account</h1>
+    <div class="row">
 
-
-            <div class="row">
-                <div class="col-md-4">
-                    <h2>Dati utente</h2>
-                    <form method="post">
-                    <div class="form-group">
-                        <label>Nome</label>
-                        <input type="text" name="nome" class="form-control" value="{{ user.nome }}">
-                    </div>
-                    <div class="form-group">
-                        <label>Cognome</label>
-                        <input type="text" name="cognome" class="form-control" value="{{ user.cognome }}">
-                    </div>
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input type="text" name="email" class="form-control" value="{{ user.email }}">
-                    </div>
-
-
-                        <div class="d-flex">
-                        <button type="submit" class="btn btn-white"> Cambia password <i class="fas fa-plug ml-3"></i></button>
-                            <button type="submit" class="btn btn-secondary ml-auto"><i class="fas fa-save mr-3"></i> Salva</button>
+        <div class="col-4">
+            <a href="/user-account/ordini" class="text-dark">
+                <div class="card">
+                    <div class="card-header text-center">
+                        <div class="h1">
+                            <i class="fas fa-shopping-cart"></i>
                         </div>
-                    </form>
-                </div>
-
-                <div class="col-md-4 mt-5 mt-md-0">
-                    <h2>Indirizzo di spedizione</h2>
-                    <p>Questi sono i dati correnti per la spedizione</p>
-                    <div class="card mb-3">
-                        <div class="card-header">
-                            <p>{{ spedizione.nome }} {{ spedizione.cognome }}</p>
-                            <p>{{ spedizione.via }} {{ spedizione.numero }}, {{ spedizione.citta }}</p>
-                        </div>
-
-                    </div>
-                    <div class="d-flex">
-                        <a href="" class="btn btn-white"> Modifica</a>
-                        <a href="" class="btn btn-secondary ml-auto"><i class="fas fa-plus mr-3"></i> Nuovo indirizzo</a>
+                        <span>I miei ordini</span>
                     </div>
                 </div>
-
-
-
-
-            </div>
-
-
-
-            <div class="row">
-                <div class="mt-5 col-md-8 offset-md-2">
-                    <h2>I miei ordini</h2>
-                    <p>Riepilogo dei tuoi ordini</p>
-
-                    {% for ordine in  user.getOrders() %}
-                        <div class="card mb-2">
-                            <div class="card-body" data-toggle="collapse" href="#ordinebody{{ ordine.id }}">
-                                <div class="row">
-                                    <div class="col-md mr-auto">
-                                        <b>Data</b> : {{ ordine.updated_at | date }}<br>
-                                        <b>Pagamento</b> : {{ ordine.gateway }}
-                                    </div>
-
-                                    <div class="ml-4 ml-md-auto mr-auto h5 ">
-                                        {% if ordine.stato %}
-                                            <span class="badge badge-primary badge-pill">
-                                            {{ ordine.stato }}
-                                                {% endif %}
-                                        </span>
-                                    </div>
-                                    <div class="">
-                                        <span class="price" style="font-size:2em;">{{ ordine.totale|price }}</span>
-                                    </div>
-                                    <div class="mr-3 ml-3">
-                                        <i class="fas fa-angle-down"></i>
-                                    </div>
-
-                                </div>
-                            </div>
-
-                            <div class="card-header collapse" id="ordinebody{{ ordine.id }}">
-
-                                {% set spedizione = ordine.getShippingAddress() %}
-
-                                <h5><b>Spedito a</b></h5>
-                                <div>
-                                    {{ spedizione.nome }} {{ spedizione.cognome }}<br>
-                                    {{ spedizione.via }} {{ spedizione.numero }} <br>
-                                    {{ spedizione.citta }}
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-
+            </a>
         </div>
-    </main>
+
+
+        <div class="col-4">
+            <a href="/user-account/profilo" class="text-dark">
+                <div class="card">
+                    <div class="card-header text-center">
+                        <div class="h1">
+                            <i class="fas fa-user"></i>
+                        </div>
+                        <span>Profilo</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+
+
+        <div class="col-4">
+            <a href="/user-account/spedizione" class="text-dark">
+                <div class="card">
+                    <div class="card-header text-center">
+                        <div class="h1">
+                            <i class="fas fa-shipping-fast"></i>
+                        </div>
+                        <span>Spedizione</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+    </div>
+
 {% endblock %}
