--- a/app/frontend/spagnesi/template/pagine/home.twig
+++ b/app/frontend/spagnesi/template/pagine/home.twig
@@ -1,6 +1,7 @@
 {% extends "base/template.twig" %}
 {% block content %}
 
+
     <section id="slide-home">
 
         <img src="/assets/img/slide-home.png">
@@ -18,6 +19,10 @@
             </div>
         </article>
     </section>
+
+
+    {{ banner("home.sotto.slide") }}
+
 
     {% if not Request.isMobile %}
     <div class="container text-center mt-5">
