--- a/app/assets/css/less/prodotto.less
+++ b/app/assets/css/less/prodotto.less
@@ -609,3 +609,64 @@ body.scegliendo-variante{
   border-top: 1px solid #ccc;
   margin-top: 3em;
 }
+
+
+
+.sconto{
+  position: absolute;
+  right: 0;
+  background: #f00;
+  height: 3em;
+  width: 3em;
+  //border-radius: 100%;
+  display: inline-block;
+  z-index: 99;
+  text-align: center;
+  line-height: 3em;
+  font-size: 1.5em;
+  padding: 0.2em;
+  box-sizing: content-box;
+  color: #fff;
+  font-weight: bold;
+  margin: 1em;
+}
+
+
+
+.sconto{
+  background: #f00;
+
+  position: absolute;
+  text-align: center;
+
+  top:0;
+
+  right:0;
+  z-index:99;
+  span{
+    position: relative;
+    z-index: 2;
+  }
+}
+.sconto:before,
+.sconto:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #f00;
+}
+.sconto:before {
+  transform: rotate(30deg);
+}
+.sconto:after {
+  transform: rotate(60deg);
+}
+
+.product-thumbnail-preview .sconto{
+
+  font-size: 1em;
+  top: -0.5em;
+}
