--- a/app/frontend/spagnesi/template/base/head/meta.twig
+++ b/app/frontend/spagnesi/template/base/head/meta.twig
@@ -7,5 +7,5 @@
 <meta name="og:type" content="article" />
 <meta name="og:title" content="{{ meta.title }}" />
 <meta name="og:description" content="{{ meta.description }}" />
-<meta name="og:image" content="{{ meta.og_image }}" />
+<meta name="og:image" content="{{ host }}{{ meta.og_image }}" />
 <meta name="og:site_name" content="DivaniLab" />
