--- a/app/frontend/spagnesi/template/base/head/meta.twig
+++ b/app/frontend/spagnesi/template/base/head/meta.twig
@@ -3,9 +3,9 @@
 <meta name="description" content="{{ meta.description }}">
 
 
-<meta name="og:url" content="{{ current_url }}" />
-<meta name="og:type" content="article" />
-<meta name="og:title" content="{{ meta.title }}" />
-<meta name="og:description" content="{{ meta.description }}" />
-<meta name="og:image" content="{{ host }}{{ meta.og_image }}" />
-<meta name="og:site_name" content="DivaniLab" />
+<meta property="og:url" content="{{ current_url }}" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="{{ meta.title }}" />
+<meta property="og:description" content="{{ meta.description }}" />
+<meta property="og:image" content="{{ host }}{{ meta.og_image }}" />
+<meta property="og:site_name" content="DivaniLab" />
